Fix usernames being clipped in the user chip component

--- a/src/app/components/users/user.component.scss
+++ b/src/app/components/users/user.component.scss
@@ -1,6 +1,10 @@
 ion-chip {
   white-space: nowrap;
 
+  ion-label {
+    overflow: initial;
+  }
+
   &.avatar-only {
     max-width: 33px;
     padding: 4px;
